// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Product Skeletons stories snapshot > MainSkeleton story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-4"
  >
    <div
      class="block md:hidden space-y-4"
    >
      <div
        class="bg-accent animate-pulse rounded-md h-8 w-3/4"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse rounded-md h-4 w-full"
        data-slot="skeleton"
      />
      <div
        class="bg-accent animate-pulse rounded-md h-4 w-2/3"
        data-slot="skeleton"
      />
    </div>
    <div
      class="grid grid-cols-1 lg:grid-cols-2 gap-8"
    >
      <div
        class="space-y-4"
      >
        <div
          class="bg-accent animate-pulse rounded-md aspect-square w-full"
          data-slot="skeleton"
        />
        <div
          class="flex space-x-2"
        >
          <div
            class="bg-accent animate-pulse rounded-md aspect-square w-16 h-16"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-md aspect-square w-16 h-16"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-md aspect-square w-16 h-16"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-md aspect-square w-16 h-16"
            data-slot="skeleton"
          />
        </div>
      </div>
      <div
        class="space-y-6"
      >
        <div
          class="hidden md:block space-y-4"
        >
          <div
            class="bg-accent animate-pulse rounded-md h-10 w-3/4"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-md h-4 w-full"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-md h-4 w-2/3"
            data-slot="skeleton"
          />
        </div>
        <div
          class="space-y-2"
        >
          <div
            class="bg-accent animate-pulse rounded-md h-8 w-32"
            data-slot="skeleton"
          />
          <div
            class="bg-accent animate-pulse rounded-md h-4 w-24"
            data-slot="skeleton"
          />
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="space-y-2"
          >
            <div
              class="bg-accent animate-pulse rounded-md h-4 w-16"
              data-slot="skeleton"
            />
            <div
              class="flex space-x-2"
            >
              <div
                class="bg-accent animate-pulse w-8 h-8 rounded-full"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse w-8 h-8 rounded-full"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse w-8 h-8 rounded-full"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse w-8 h-8 rounded-full"
                data-slot="skeleton"
              />
            </div>
          </div>
          <div
            class="space-y-2"
          >
            <div
              class="bg-accent animate-pulse rounded-md h-4 w-12"
              data-slot="skeleton"
            />
            <div
              class="flex space-x-2"
            >
              <div
                class="bg-accent animate-pulse rounded-md w-12 h-10"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse rounded-md w-12 h-10"
                data-slot="skeleton"
              />
              <div
                class="bg-accent animate-pulse rounded-md w-12 h-10"
                data-slot="skeleton"
              />
            </div>
          </div>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="flex items-center space-x-4"
          >
            <div
              class="bg-accent animate-pulse rounded-md h-10 w-24"
              data-slot="skeleton"
            />
            <div
              class="bg-accent animate-pulse rounded-md h-10 flex-1"
              data-slot="skeleton"
            />
          </div>
          <div
            class="bg-accent animate-pulse rounded-md h-10 w-full"
            data-slot="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      class="mt-16 space-y-4"
    >
      <div
        class="border rounded-lg p-4"
      >
        <div
          class="bg-accent animate-pulse rounded-md h-6 w-48"
          data-slot="skeleton"
        />
      </div>
      <div
        class="border rounded-lg p-4"
      >
        <div
          class="bg-accent animate-pulse rounded-md h-6 w-48"
          data-slot="skeleton"
        />
      </div>
      <div
        class="border rounded-lg p-4"
      >
        <div
          class="bg-accent animate-pulse rounded-md h-6 w-48"
          data-slot="skeleton"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Product Skeletons stories snapshot > RecommendationSkeleton story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-4"
  >
    <div
      class="w-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 animate-pulse"
    >
      <div
        class="flex items-center justify-between mb-6"
      >
        <div
          class="bg-accent animate-pulse rounded-md h-8 md:h-9 w-64"
          data-slot="skeleton"
        />
      </div>
      <div
        class="relative w-full"
      >
        <div
          class="overflow-hidden"
        >
          <div
            class="flex -ml-4 items-stretch flex-nowrap"
          >
            <div
              class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-4 min-w-0 shrink-0 grow-0"
            >
              <div
                class="w-full max-w-full min-w-0 flex"
              >
                <div
                  class="bg-card text-card-foreground border shadow-sm rounded-xl overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                  data-slot="card"
                >
                  <div
                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                    data-slot="card-header"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md aspect-square w-full"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-3 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                  <div
                    class="px-4 pt-2 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                      data-slot="skeleton"
                    />
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-2 pb-4"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-5 w-16"
                      data-slot="skeleton"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-4 min-w-0 shrink-0 grow-0"
            >
              <div
                class="w-full max-w-full min-w-0 flex"
              >
                <div
                  class="bg-card text-card-foreground border shadow-sm rounded-xl overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                  data-slot="card"
                >
                  <div
                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                    data-slot="card-header"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md aspect-square w-full"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-3 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                  <div
                    class="px-4 pt-2 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                      data-slot="skeleton"
                    />
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-2 pb-4"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-5 w-16"
                      data-slot="skeleton"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-4 min-w-0 shrink-0 grow-0"
            >
              <div
                class="w-full max-w-full min-w-0 flex"
              >
                <div
                  class="bg-card text-card-foreground border shadow-sm rounded-xl overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                  data-slot="card"
                >
                  <div
                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                    data-slot="card-header"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md aspect-square w-full"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-3 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                  <div
                    class="px-4 pt-2 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                      data-slot="skeleton"
                    />
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-2 pb-4"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-5 w-16"
                      data-slot="skeleton"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-4 min-w-0 shrink-0 grow-0"
            >
              <div
                class="w-full max-w-full min-w-0 flex"
              >
                <div
                  class="bg-card text-card-foreground border shadow-sm rounded-xl overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                  data-slot="card"
                >
                  <div
                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                    data-slot="card-header"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md aspect-square w-full"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-3 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                  <div
                    class="px-4 pt-2 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                      data-slot="skeleton"
                    />
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-2 pb-4"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-5 w-16"
                      data-slot="skeleton"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="absolute left-0 top-1/2 -translate-y-1/2 -translate-x-1/2"
        >
          <div
            class="bg-accent animate-pulse h-9 w-9 rounded-lg"
            data-slot="skeleton"
          />
        </div>
        <div
          class="absolute right-0 top-1/2 -translate-y-1/2 translate-x-1/2"
        >
          <div
            class="bg-accent animate-pulse h-9 w-9 rounded-lg"
            data-slot="skeleton"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Product Skeletons stories snapshot > RecommendationsSkeleton story renders and matches snapshot 1`] = `
<div>
  <div
    class="p-4"
  >
    <div
      class="w-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 animate-pulse"
    >
      <div
        class="relative w-full"
      >
        <div
          class="overflow-hidden"
        >
          <div
            class="flex -ml-4 items-stretch flex-nowrap"
          >
            <div
              class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-4 min-w-0 shrink-0 grow-0"
            >
              <div
                class="w-full max-w-full min-w-0 flex"
              >
                <div
                  class="bg-card text-card-foreground border shadow-sm rounded-xl overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                  data-slot="card"
                >
                  <div
                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                    data-slot="card-header"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md aspect-square w-full"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-3 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                  <div
                    class="px-4 pt-2 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                      data-slot="skeleton"
                    />
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-2 pb-4"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-5 w-16"
                      data-slot="skeleton"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-4 min-w-0 shrink-0 grow-0"
            >
              <div
                class="w-full max-w-full min-w-0 flex"
              >
                <div
                  class="bg-card text-card-foreground border shadow-sm rounded-xl overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                  data-slot="card"
                >
                  <div
                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                    data-slot="card-header"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md aspect-square w-full"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-3 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                  <div
                    class="px-4 pt-2 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                      data-slot="skeleton"
                    />
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-2 pb-4"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-5 w-16"
                      data-slot="skeleton"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-4 min-w-0 shrink-0 grow-0"
            >
              <div
                class="w-full max-w-full min-w-0 flex"
              >
                <div
                  class="bg-card text-card-foreground border shadow-sm rounded-xl overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                  data-slot="card"
                >
                  <div
                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                    data-slot="card-header"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md aspect-square w-full"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-3 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                  <div
                    class="px-4 pt-2 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                      data-slot="skeleton"
                    />
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-2 pb-4"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-5 w-16"
                      data-slot="skeleton"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-4 min-w-0 shrink-0 grow-0"
            >
              <div
                class="w-full max-w-full min-w-0 flex"
              >
                <div
                  class="bg-card text-card-foreground border shadow-sm rounded-xl overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                  data-slot="card"
                >
                  <div
                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                    data-slot="card-header"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md aspect-square w-full"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-3 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                  <div
                    class="px-4 pt-2 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                      data-slot="skeleton"
                    />
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-2 pb-4"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-5 w-16"
                      data-slot="skeleton"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="absolute left-0 top-1/2 -translate-y-1/2 -translate-x-1/2"
        >
          <div
            class="bg-accent animate-pulse h-9 w-9 rounded-lg"
            data-slot="skeleton"
          />
        </div>
        <div
          class="absolute right-0 top-1/2 -translate-y-1/2 translate-x-1/2"
        >
          <div
            class="bg-accent animate-pulse h-9 w-9 rounded-lg"
            data-slot="skeleton"
          />
        </div>
      </div>
    </div>
    <div
      class="w-full max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-8 md:py-12 animate-pulse"
    >
      <div
        class="relative w-full"
      >
        <div
          class="overflow-hidden"
        >
          <div
            class="flex -ml-4 items-stretch flex-nowrap"
          >
            <div
              class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-4 min-w-0 shrink-0 grow-0"
            >
              <div
                class="w-full max-w-full min-w-0 flex"
              >
                <div
                  class="bg-card text-card-foreground border shadow-sm rounded-xl overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                  data-slot="card"
                >
                  <div
                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                    data-slot="card-header"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md aspect-square w-full"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-3 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                  <div
                    class="px-4 pt-2 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                      data-slot="skeleton"
                    />
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-2 pb-4"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-5 w-16"
                      data-slot="skeleton"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-4 min-w-0 shrink-0 grow-0"
            >
              <div
                class="w-full max-w-full min-w-0 flex"
              >
                <div
                  class="bg-card text-card-foreground border shadow-sm rounded-xl overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                  data-slot="card"
                >
                  <div
                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                    data-slot="card-header"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md aspect-square w-full"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-3 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                  <div
                    class="px-4 pt-2 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                      data-slot="skeleton"
                    />
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-2 pb-4"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-5 w-16"
                      data-slot="skeleton"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-4 min-w-0 shrink-0 grow-0"
            >
              <div
                class="w-full max-w-full min-w-0 flex"
              >
                <div
                  class="bg-card text-card-foreground border shadow-sm rounded-xl overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                  data-slot="card"
                >
                  <div
                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                    data-slot="card-header"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md aspect-square w-full"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-3 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                  <div
                    class="px-4 pt-2 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                      data-slot="skeleton"
                    />
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-2 pb-4"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-5 w-16"
                      data-slot="skeleton"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="basis-1/2 sm:basis-1/3 md:basis-1/4 py-1 flex pl-4 min-w-0 shrink-0 grow-0"
            >
              <div
                class="w-full max-w-full min-w-0 flex"
              >
                <div
                  class="bg-card text-card-foreground border shadow-sm rounded-xl overflow-hidden w-full max-w-full flex flex-col h-full gap-0 py-0"
                  data-slot="card"
                >
                  <div
                    class="@container/card-header grid auto-rows-min grid-rows-[auto_auto] items-start gap-2 has-data-[slot=card-action]:grid-cols-[1fr_auto] [.border-b]:pb-6 p-0"
                    data-slot="card-header"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md aspect-square w-full"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-3 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="flex items-center gap-1"
                    >
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                      <div
                        class="bg-accent animate-pulse h-7 w-7 rounded-full"
                        data-slot="skeleton"
                      />
                    </div>
                  </div>
                  <div
                    class="px-4 pt-2 pb-0"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-full mb-1"
                      data-slot="skeleton"
                    />
                    <div
                      class="bg-accent animate-pulse rounded-md h-4 w-3/4"
                      data-slot="skeleton"
                    />
                  </div>
                  <div
                    class="px-4 pt-2 pb-4"
                    data-slot="card-content"
                  >
                    <div
                      class="bg-accent animate-pulse rounded-md h-5 w-16"
                      data-slot="skeleton"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="absolute left-0 top-1/2 -translate-y-1/2 -translate-x-1/2"
        >
          <div
            class="bg-accent animate-pulse h-9 w-9 rounded-lg"
            data-slot="skeleton"
          />
        </div>
        <div
          class="absolute right-0 top-1/2 -translate-y-1/2 translate-x-1/2"
        >
          <div
            class="bg-accent animate-pulse h-9 w-9 rounded-lg"
            data-slot="skeleton"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
